bases/nzbget/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbget
  annotations:
    mimikyu.reynn.net/resource-profiile: small
spec:
  selector:
    matchLabels:
      app: nzbget
  template:
    metadata:
      labels:
        app: nzbget
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: k3s.io/hostname
                    operator: In
                    values:
                      - mimikyu
      containers:
        - name: nzbget
          image: linuxserver/nzbget
          resources: {}
          ports:
            - containerPort: 6789
              name: tcp-server
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media/deadpool/downloads
              name: media
            - mountPath: /media/deadpool/nzbs
              name: temp-nzbs
      volumes:
        - name: media
          hostPath:
            path: /media/deadpool/downloads
            type: Directory
        - name: config
          hostPath:
            path: /media/deadpool/docker/media-server/nzbget
            type: Directory
        - name: temp-nzbs
          emptyDir: {}
